# vectorstore

./: Dockerfile  main.py  pyproject.toml
conf/: config.yaml
emdedders/: __init__.py  embedder.py  embedder_conf.py  embedder_type.py  huggingface_hub.py  openai.py
etl/: load_conf.py
indexers/: __init__.py  chroma.py  indexer.py  indexer_conf.py  indexer_type.py  pinecone.py
loaders/: __init__.py  csv.py  loader.py  loader_conf.py  loader_type.py  read_the_docs.py
splitters/: __init__.py  character.py  recursive_character.py  splitter.py  splitter_conf.py  splitter_type.py
